--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@ body {
     background-size: cover; 
     background-repeat: no-repeat;
     background-attachment:  fixed;
-    font-family: sans-serif;
+    font-family: 'Source Code Pro', monospace;
     height: 100vh; /*garantir que a altura do body seja sempre a mesma*/
     font-size: 12px;
   }
@@ -39,7 +39,7 @@ body {
 }
 
   header {
-    height: 80vh; /*100% da altura da tela*/
+    height: 100vh; /*100% da altura da tela*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,7 +69,6 @@ body {
   a {
     color: #000000;
     text-decoration: none;
-
   }
   
   a:hover {
@@ -84,34 +83,62 @@ body {
 
   .site-title {
     font: 4em; /*4 vezes o tamanho do body*/
+    font-family: 'Shadows Into Light', cursive;
   }
   
   .site-subtitle {
     font-style: italic;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: space-evenly;
+    font-family: 'Jost', sans-serif;
+    font-size: 25px;
   }
 
-  .site-portfolio {
+  .portfolio {
+    padding: 2em;
+    height: 100vh;
+  }
+
+  .portfolio h2 {
+    font-family: 'Jost', sans-serif;
+    color: whitesmoke;
+    font-size: 1.5em;
     text-align: center;
-    padding: 30px;
+    margin: 1.5em;
+  }
+
+
+  /*seleciona apenas a classe grid que está dentro da classe portfólio*/
+  .portfolio .grid {
+    display: grid;
+    gap: 2em; /*propriedade utilizada para dar distância entre os elementos, somente com o display grid*/
+    color: whitesmoke;
+  }
+
+  @media (min-width: 560px) {
+    .portfolio .grid {
+      grid-template-columns: 240px 240px; 
+    }   
+  }
+
+  @media (min-width: 860px) {
+    .portfolio .grid {
+      grid-template-columns: repeat(3, 240px);  /*3 colunas de 240px*/
+      align-content: center;
+      justify-content: center;
+      height: calc(100vh - 8em - 48px);
+    }   
+  }
+
+  .portfolio figure {
+    text-align: center;
   }
 
   .img-portfolio {
-    width: 180px;
     height: 180px;
-    
+    width: 240px;
+    object-fit: cover;
+    border-radius: 15px ;
   }
 
-  .img-portfolio-letra {
-    color: white;
-    text-align: center;
-    font-size: 16px;
-  }
 
-  h2 {
-    color: whitesmoke;
-  }
+
+  
