--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,9 +7,8 @@
 } 
 
 body {
-    background-color: #FFFF00;
-   /* background-image: url('https://images.unsplash.com/photo-1536859355448-76f92ebdc33d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=800');*/
-    background-size: auto;
+    background-image: url('https://images.unsplash.com/photo-1536859355448-76f92ebdc33d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=800');
+    background-size: cover; 
     background-repeat: no-repeat;
     background-attachment:  fixed;
     font-family: 'Source Code Pro', monospace;
@@ -47,11 +46,10 @@ body {
   }/*as propriedades align-itens e justify-content só funcionam por causa da propriedade flex*/
   
   .menu {
-    background-color: #191970;
+    background-color: #FF7F50;
     position: fixed;
     width: 100vw; /*ocupa 100% da largura da tela*/
     top: 0; /*só funciona se um position estiver declarado, colocou a barra nav para cima da tela*/
-    z-index: 1; /*muda a prioridade do eixo z, não deixando as animações se sobreporem no site*/
   }
   
   .menu ul {
@@ -66,106 +64,47 @@ body {
   .menu a {
     display: block; /*utilizado para aumentar a area de clique do link sem que o padding extravaze para fora*/
     padding: 10px 20px;
-    transition: background-color 1s, color 1s; /* sempre que usar propriedades de hover é bom especificar uma transition para o efeito*/
-  }
-
-  .menu a:hover {
-    background-color: yellow;
-    color: black;    
   }
 
   a {
-    color: white;
+    color: #000000;
     text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline; 
   }
   
   .site-title,
   .site-subtitle {
     text-align: center;
-    color: black;
+    color: #F0FFF0;
   }
 
   .site-title {
-    font-size: 3.5em; /*3,5 vezes o tamanho do body*/
+    font: 4em; /*4 vezes o tamanho do body*/
     font-family: 'Shadows Into Light', cursive;
   }
   
   .site-subtitle {
     font-style: italic;
     font-family: 'Jost', sans-serif;
-    font-size: 28px;
+    font-size: 25px;
   }
 
-  .sobre,
-  .contatos,
   .portfolio {
     padding: 2em;
-    min-height: 100vh;
+    height: 100vh;
   }
-
-  /*quando o site for exibido numa tela de no minimo 1200px de largura, serão aplicadas as propriedades abaixo*/
-  @media (min-width:1200px) {
-    .container {
-      max-width: 1200px;
-      margin-left: auto;/* estas duas propriedades de margem servem para alinhar as informações no centro da tela, importante em telas grandes*/
-      margin-right: auto;
-    }
-  }
-
-  .sobre h2,
-  .contatos h2,
+  
   .portfolio h2 {
     font-family: 'Jost', sans-serif;
-    color: black;
-    font-size: 2em;
-    margin-bottom: 1.5em;
-  }
-
-  @media(min-width:860px) {
-    .portfolio h2 {
-      margin-top: auto;
-      margin-bottom: -72px;
-    }
-  }
-
-
-  .sobre p {
-    font-family: 'Source Code Pro', monospace;
-    color: black;
-    font-size: 1em;
+    color: whitesmoke;
+    font-size: 1.5em;
+    text-align: center;
     margin: 1.5em;
-    margin-bottom: 1.2em;
-    text-indent: 1.4em;
-    text-align: justify;
   }
 
-  .sobre a {
-    color: black;
-    text-decoration: underline;
-  }
-
-  .sobre a:hover {
-    background-color:whitesmoke;
-    text-decoration: none;
-  }
-
-
-  .sobre .img-sobre img { /*para mobile*/
-    clip-path: circle(50% at 50% 50%);
-    width: 250px;
-    height: 250px;
-    margin: 2em;
-  }
-
-  @media (min-width: 600px) { /*para telas maiores*/
-    .sobre .img-sobre img {
-      clip-path: polygon(25% 0%, 100% 1%, 100% 100%, 25% 100%, 0% 50%);
-      width: 400px;
-      height: 400px;
-      float: right;
-      margin-left: 2em;
-    } 
-  }
 
   /*seleciona apenas a classe grid que está dentro da classe portfólio*/
   .portfolio .grid {
@@ -195,79 +134,11 @@ body {
 
   .img-portfolio {
     height: 180px;
-    width: 100%;
+    width: 240px;
     object-fit: cover;
-    border-radius: 15px;
-    transition: transform 700ms;
+    border-radius: 15px ;
   }
 
-  .flip-card {
-    height: 180px;
-    perspective: 1000px;
-  }
 
-  .flip-card:hover .card{
-    transform: rotateY(180deg);
-    perspective: 1000px;
-    
-  }
-
-  .card {
-    position: relative; /*coloca os outros cards numa posição relativa ao elemento-mãe*/
-    transform-style: preserve-3d;
-    transition: transform 1.5s;
-  }
-
-  .card-front, 
-  .card-back {
-    position: absolute;
-    top: 0;
-    left: 0;    
-    backface-visibility: hidden;
-    top: 0;
-  }
-
-  .card-back {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color:#191970;
-    height: 180px;
-    width: 100%;
-    transform: rotateY(180deg);
-    border-radius: 15px;
-  }
-
-  h3 {
-    color: whitesmoke;
-    display: block;
-    font-size: 1em;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-  }
-  .contatos a {
-    color: black;
-    font-size: 4em;
-    margin-left: 0.6em;
-    margin-right: 0.6em;
-    transition: text-shadow 1s;
-  }
-  
-  .contatos .icons {
-    text-align: center;
-  }
-
-  .contatos a:active, /*para ativar o hover no mobile*/
-  .contatos a:hover {
-    text-decoration: none;
-    text-shadow: 10px 10px 5px whitesmoke;
-  }
 
   
-  .copyright {
-    text-align: center;
-    margin-bottom: 6em;
-  }
